--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,18 @@
   min-height: 100vh;
   background: var(--black);
 }
+
+*::-webkit-scrollbar {
+  width: 0.5em;
+  height: 0.5em;
+}
+
+*::-webkit-scrollbar-track {
+  background-color: rgba(0,0,0,.6);
+  background-color: #333;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: rgba(255,255,255,.2);
+  outline: none;
+}
