--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -26,18 +26,12 @@
   background: var(--black);
   border-bottom: 2px solid var(--primary);
 }
-body {
-  --bodyPaddingTop: 94px;
-  padding-top: var(--bodyPaddingTop);
-}
+
 @media (max-width: 800px) {
   .Menu {
-    height: 40px;
+    height: 63px;
     justify-content: center;
-  }
-  body {
-    --bodyPaddingTop: 40px;
-    padding-top: var(--bodyPaddingTop);
+    padding-top: 10px;
   }
 }
 
