adiciona erro loading

--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -10,3 +10,10 @@
   align-items: center;
   justify-content: center;
 }
+
+.Home #LoadingError {
+  min-height: 400px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
